--- a/package.json
+++ b/package.json
@@ -6,13 +6,16 @@
     "start": "next start"
   },
   "dependencies": {
+    "@heroicons/react": "^2.0.13",
     "@portabletext/react": "^2.0.0",
     "@sanity/image-url": "^1.0.1",
+    "@sanity/vision": "^3.0.0",
+    "jotai": "^1.12.0",
     "next": "latest",
     "next-sanity": "^3.1.8",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "@sanity/vision": "^3.0.0",
+    "react-icons": "^4.7.1",
     "sanity": "^3.0.0",
     "styled-components": "^5.2.0"
   },
