--- a/package.json
+++ b/package.json
@@ -10,19 +10,25 @@
     "@portabletext/react": "^2.0.0",
     "@sanity/image-url": "^1.0.1",
     "@sanity/vision": "^3.0.0",
+    "framer-motion": "^8.0.2",
     "jotai": "^1.12.0",
     "next": "latest",
     "next-sanity": "^3.1.8",
     "react": "18.2.0",
+    "react-anchor-link-smooth-scroll": "1.0.12",
     "react-dom": "18.2.0",
     "react-icons": "^4.7.1",
+    "react-scroll": "^1.8.9",
     "sanity": "^3.0.0",
-    "styled-components": "^5.2.0"
+    "sass": "^1.57.1",
+    "styled-components": "^5.2.0",
+    "swiper": "^8.4.5"
   },
   "devDependencies": {
     "@sanity/eslint-config-studio": "^2.0.1",
-    "@types/node": "18.11.3",
+    "@types/node": "^18.11.17",
     "@types/react": "18.0.21",
+    "@types/react-anchor-link-smooth-scroll": "^1.0.2",
     "@types/react-dom": "18.0.6",
     "autoprefixer": "^10.4.12",
     "postcss": "^8.4.18",
