--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@heroicons/react": "^2.0.13",
     "@material-tailwind/react": "^1.2.4",
     "@portabletext/react": "^2.0.0",
+    "@sanity/google-maps-input": "^3.0.0",
     "@sanity/image-url": "^1.0.1",
     "@sanity/vision": "^3.0.0",
     "@types/react-slick": "^0.23.10",
@@ -21,6 +22,7 @@
     "react-anchor-link-smooth-scroll": "1.0.12",
     "react-dom": "18.2.0",
     "react-icons": "^4.7.1",
+    "react-router-dom": "^6.6.1",
     "react-scroll": "^1.8.9",
     "react-slick": "^0.29.0",
     "sanity": "^3.0.0",
