Completed News Item UI & News Item Backend

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@sanity/google-maps-input": "^3.0.0",
     "@sanity/image-url": "^1.0.1",
     "@sanity/vision": "^3.0.0",
+    "@tailwindcss/line-clamp": "^0.4.2",
     "@types/react-slick": "^0.23.10",
     "classnames": "^2.3.2",
     "flowbite": "^1.5.5",
@@ -23,10 +24,12 @@
     "react-anchor-link-smooth-scroll": "1.0.12",
     "react-dom": "18.2.0",
     "react-icons": "^4.7.1",
+    "react-portable-text": "^0.5.1",
     "react-router-dom": "^6.6.1",
     "react-scroll": "^1.8.9",
     "react-slick": "^0.29.0",
     "sanity": "^3.0.0",
+    "sanity-plugin-iframe-pane": "^2.1.1",
     "sass": "^1.57.1",
     "slick-carousel": "^1.8.1",
     "styled-components": "^5.3.6",
