--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "@faker-js/faker": "^7.6.0",
     "@heroicons/react": "^2.0.13",
     "@material-tailwind/react": "^1.2.4",
     "@portabletext/react": "^2.0.0",
@@ -13,6 +14,7 @@
     "@sanity/image-url": "^1.0.1",
     "@sanity/vision": "^3.0.0",
     "@tailwindcss/line-clamp": "^0.4.2",
+    "@types/react-scroll": "^1.8.5",
     "@types/react-slick": "^0.23.10",
     "classnames": "^2.3.2",
     "flowbite": "^1.5.5",
