--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "sanity": "^3.0.0",
     "sanity-plugin-iframe-pane": "^2.1.1",
     "sass": "^1.57.1",
+    "sharp": "^0.31.3",
     "slick-carousel": "^1.8.1",
     "styled-components": "^5.3.6",
     "swiper": "^8.4.5",
