--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@heroicons/react": "^2.0.13",
     "@material-tailwind/react": "^1.2.4",
     "@portabletext/react": "^2.0.0",
+    "@react-google-maps/api": "^2.17.1",
     "@sanity/google-maps-input": "^3.0.0",
     "@sanity/image-url": "^1.0.1",
     "@sanity/vision": "^3.0.0",
@@ -17,9 +18,12 @@
     "@types/react-scroll": "^1.8.5",
     "@types/react-slick": "^0.23.10",
     "classnames": "^2.3.2",
+    "dotenv": "^16.0.3",
     "flowbite": "^1.5.5",
     "framer-motion": "^8.0.2",
     "jotai": "^1.12.0",
+    "jsonwebtoken": "^9.0.0",
+    "leaflet": "^1.9.3",
     "next": "latest",
     "next-sanity": "^3.1.8",
     "react": "18.2.0",
@@ -28,12 +32,14 @@
     "react-hook-form": "^7.41.3",
     "react-hot-toast": "^2.4.0",
     "react-icons": "^4.7.1",
+    "react-leaflet": "^4.2.0",
     "react-portable-text": "^0.5.1",
     "react-router-dom": "^6.6.1",
     "react-scroll": "^1.8.9",
     "react-slick": "^0.29.0",
     "sanity": "^3.0.0",
     "sanity-plugin-iframe-pane": "^2.1.1",
+    "sanity-plugin-leaflet-input": "^1.0.1",
     "sass": "^1.57.1",
     "sharp": "^0.31.3",
     "slick-carousel": "^1.8.1",
@@ -43,7 +49,10 @@
   },
   "devDependencies": {
     "@sanity/eslint-config-studio": "^2.0.1",
-    "@types/node": "^18.11.17",
+    "@types/google-map-react": "^2.1.7",
+    "@types/jsonwebtoken": "^9.0.0",
+    "@types/leaflet": "^1.9.0",
+    "@types/node": "^18.11.18",
     "@types/react": "18.0.21",
     "@types/react-anchor-link-smooth-scroll": "^1.0.2",
     "@types/react-dom": "18.0.6",
