Added Downloader - each, all

--- a/package.json
+++ b/package.json
@@ -19,10 +19,13 @@
     "@types/react-slick": "^0.23.10",
     "classnames": "^2.3.2",
     "dotenv": "^16.0.3",
+    "file-saver": "^2.0.5",
     "flowbite": "^1.5.5",
     "framer-motion": "^8.0.2",
     "jotai": "^1.12.0",
     "jsonwebtoken": "^9.0.0",
+    "jszip": "^3.10.1",
+    "jszip-utils": "^0.1.0",
     "leaflet": "^1.9.3",
     "next": "latest",
     "next-sanity": "^3.1.8",
@@ -41,8 +44,10 @@
     "sanity-plugin-iframe-pane": "^2.1.1",
     "sanity-plugin-leaflet-input": "^1.0.1",
     "sass": "^1.57.1",
+    "save-as": "^0.1.8",
     "sharp": "^0.31.3",
     "slick-carousel": "^1.8.1",
+    "stream": "^0.0.2",
     "styled-components": "^5.3.6",
     "swiper": "^8.4.5",
     "tw-elements": "^1.0.0-alpha13"
@@ -51,6 +56,7 @@
     "@sanity/eslint-config-studio": "^2.0.1",
     "@types/google-map-react": "^2.1.7",
     "@types/jsonwebtoken": "^9.0.0",
+    "@types/jszip": "^3.4.1",
     "@types/leaflet": "^1.9.0",
     "@types/node": "^18.11.18",
     "@types/react": "18.0.21",
