--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,7 +19,12 @@
       {
         "name": "next"
       }
-    ]
+    ],
+    "baseUrl": "./",
+    "paths": {
+      "*": ["@types/*"]
+    },
+    "typeRoots": ["./node_modules/@types", "./@types"]
   },
   "include": [
     "next-env.d.ts",
