--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@sanity/image-url": "^1.0.1",
     "@sanity/vision": "^3.0.0",
     "@tailwindcss/line-clamp": "^0.4.2",
+    "@types/nprogress": "^0.2.0",
     "@types/react-scroll": "^1.8.5",
     "@types/react-slick": "^0.23.10",
     "classnames": "^2.3.2",
@@ -29,6 +30,7 @@
     "leaflet": "^1.9.3",
     "next": "latest",
     "next-sanity": "^3.1.8",
+    "nprogress": "^0.2.0",
     "react": "18.2.0",
     "react-anchor-link-smooth-scroll": "1.0.12",
     "react-dom": "18.2.0",
@@ -40,6 +42,7 @@
     "react-router-dom": "^6.6.1",
     "react-scroll": "^1.8.9",
     "react-slick": "^0.29.0",
+    "react-spinners": "^0.13.7",
     "sanity": "^3.0.0",
     "sanity-plugin-iframe-pane": "^2.1.1",
     "sanity-plugin-leaflet-input": "^1.0.1",
