--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/nprogress": "^0.2.0",
     "@types/react-scroll": "^1.8.5",
     "@types/react-slick": "^0.23.10",
+    "@vercel/og": "^0.0.21",
     "classnames": "^2.3.2",
     "dotenv": "^16.0.3",
     "file-saver": "^2.0.5",
