Added Share Function

--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "react-portable-text": "^0.5.1",
     "react-router-dom": "^6.6.1",
     "react-scroll": "^1.8.9",
+    "react-share": "^4.4.1",
     "react-slick": "^0.29.0",
     "react-spinners": "^0.13.7",
     "sanity": "^3.0.0",
