--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "react-hot-toast": "^2.4.0",
     "react-icons": "^4.7.1",
     "react-leaflet": "^4.2.0",
+    "react-loader-spinner": "^5.3.4",
     "react-portable-text": "^0.5.1",
     "react-router-dom": "^6.6.1",
     "react-scroll": "^1.8.9",
