--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "jszip-utils": "^0.1.0",
     "leaflet": "^1.9.3",
     "next": "latest",
+    "next-images": "^1.8.4",
     "next-sanity": "^3.1.8",
     "next-seo": "^5.15.0",
     "nprogress": "^0.2.0",
@@ -61,6 +62,7 @@
   },
   "devDependencies": {
     "@sanity/eslint-config-studio": "^2.0.1",
+    "@svgr/webpack": "^6.5.1",
     "@types/google-map-react": "^2.1.7",
     "@types/jsonwebtoken": "^9.0.0",
     "@types/jszip": "^3.4.1",
